Added projects page

--- a/gambler.html
+++ b/gambler.html
@@ -26,7 +26,7 @@
         <p class="nav-title">Pages</p>
         <a class="nav-link" target="" href="index.html">
           <i class="nav-link-icon" data-feather="corner-down-right"></i>
-          <span class="current-page">Home</span>
+          <span>Home</span>
         </a>
         <a class="nav-link" target="" href="projects.html">
           <i class="nav-link-icon" data-feather="corner-down-right"></i>
@@ -34,7 +34,7 @@
         </a>
         <a class="nav-link" target="" href="gambler.html">
           <i class="nav-link-icon" data-feather="corner-down-right"></i>
-          <span>Gambler 500 Build</span>
+          <span class="current-page">Gambler 500 Build</span>
         </a>
       </div>
       <div class="social-links">
