--- a/projects.html
+++ b/projects.html
@@ -26,18 +26,24 @@
         <p class="nav-title">Pages</p>
         <a class="nav-link" target="" href="index.html">
           <i class="nav-link-icon" data-feather="corner-down-right"></i>
-          <span class="current-page">Home</span>
+          <span>Home</span>
         </a>
         <a class="nav-link" target="" href="projects.html">
           <i class="nav-link-icon" data-feather="corner-down-right"></i>
-          <span>Projects</span>
+          <span class="current-page">Projects</span>
         </a>
         <a class="nav-link" target="" href="gambler.html">
           <i class="nav-link-icon" data-feather="corner-down-right"></i>
           <span>Gambler 500 Build</span>
         </a>
       </div>
+      <div class="content">
+        <h2 class="content-title">Projects</h2>
+        <h3 class="project-header">FerryTimes</h3>
+        <p class="project-content">FerryTimes is a free and open-source API for retrieving BC Ferries sailing times.</p>
+      </div>
       <div class="social-links">
+        <br />
         <a class="social-link" target="_blank" href="https://instagram.com/sam_pratt">
           <i class="social-link-icon" data-feather="instagram"></i>
         </a>
