--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<p>I make apps.</p>
+<!DOCTYPE html>
+<html>
+    <head>
+      <meta charset='utf-8'>
+      <meta name='viewport' content='width=device-width'>
+      <title>Privacy Policy</title>
+      <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
+    </head>
+    <body>
+        <p>I make apps.</p>
+    </body>
+</html>
